--- a/nbproject/private/SuppressibleMessageMemo.properties
+++ b/nbproject/private/SuppressibleMessageMemo.properties
@@ -1,4 +1,5 @@
 #
-#Fri Aug 13 11:37:27 CEST 2021
+#Fri Feb 18 10:01:50 CET 2022
+PICkit\ 4/CHECK_4_HIGH_VOLTAGE_VPP=true
 pk3/CHECK_4_HIGH_VOLTAGE_VPP=true
 mdbDebugger/LAST_HW_BP_RESOURCE_WARN=true
